# CONTROLE_KINCONY

./: .gitignore  CHANGELOG.md  CONTROLE_KINCONY.code-workspace  Manual_MQTT_FrontEnd_Aquapulse.xlsx  README.md  build-ascii.ps1
docs/: RELATORIO_INTEGRACAO_ERALDO_DANIEL.md  RELATORIO_WIFI_RECONEXAO.md
main/: CMakeLists.txt  Kconfig.projbuild  entradas_kincony.c  idf_component.yml  main.c  modbus_rtu_slave_esp.c  modbus_rtu_slave_esp.h
main/config_server/: config_server_kincony.c  config_server_kincony.h
main/entradas_digitais/: entradas_kincony.c  entradas_kincony.h
main/logica_controle/: logica_controle.c  logica_controle.h
main/modbus_master/: modbus_rs485_config.c  modbus_rs485_config.h  modbus_rs485_master.c  modbus_rs485_master.h  modbus_rs485_mqtt.c  modbus_rs485_mqtt.h  modbus_rs485_web.c  modbus_rs485_web.h
main/modbus_rtu_slave/: modbus_rtu_slave_esp.c  modbus_rtu_slave_esp.h
main/mqtt/: mqtt_kincony.c  mqtt_kincony.h
main/ntp/: ntp_kincony.c  ntp_kincony.h
main/ota/: ota_github.c  ota_github.h
main/rtc/: rtc_ds1307.c  rtc_ds1307.h
main/saidas_digitais/: saidas_digitais_kincony.c  saidas_digitais_kincony.h
main/wifi/: wifi_config_button.c  wifi_config_button.h  wifi_kincony.c  wifi_kincony.h
